--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,9 +17,9 @@
 <body>
 <div class="container">
     <div class="row align-items-center">
-        <div class="col-md-12">
-            <h1>Final Exam Set C</h1>
-            <h1>Category Sales Summary Table</h1>
+        <div class="col-md-12 mt-3 ">
+            <h1 class="text-center mb-2">Final Exam Set C</h1>
+            <h1 class="text-center mb-2">Category Sales Summary Table</h1>
         </div>
     </div>
     <div class="row align-items-center">
@@ -74,7 +74,7 @@
 
 </div>
 
-<div class="container">
+<div class="container mt-5">
     <table class="table">
         <thead>
         <tr>
