--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,41 +35,45 @@
     </div>
 </div>
 <div class="container bg-info p-5 text-center">
-    <div class="w-50 m-auto d-flex align-items-center">
-        <div style="width: 100px">Receipt No:</div>
-        <input style="width: 300px" type="text" class="form-control" placeholder="Username" aria-label="Username"
-               aria-describedby="basic-addon1">
-        <span>Item Type:</span>
-    </div>
-
-    <div class="input-group mb-3">
-        <select class="form-select" id="inputGroupSelect02">
-            <option selected>Select Options</option>
-            <option th:each="item : ${items}" th:value="${item.icode}" th:text="${item.icode + ': ' + item.idesc}"></option>
-        </select>
-
-
-    </div>
-    <div class="d-flex  justify-content-center">
+    <Form>
         <div class="w-50 m-auto d-flex align-items-center">
-            <div style="width: 100px">Quantity:</div>
-            <input style="width: 300px"  type="text" class="form-control" placeholder="Username" aria-label="Username"
+            <div style="width: 100px">Receipt No:</div>
+            <input style="width: 300px" type="text" class="form-control" placeholder="Username" aria-label="Username"
                    aria-describedby="basic-addon1">
+            <span>Item Type:</span>
         </div>
 
-        <div class=" m-auto d-flex align-items-center">
-            <div style="width: 200px">Transaction Date:</div>
-            <div style="width: 300px"  class="input-group date" data-provide="datepicker">
-                <input type="text" class="form-control">
-                <div class="input-group-addon">
-                    <span class="glyphicon glyphicon-th"></span>
+        <div class="input-group mb-3">
+            <select class="form-select" id="inputGroupSelect02">
+                <option value="" selected>Select Options</option>
+                <option th:each="item : ${items}" th:value="${item.icode}" th:text="${item.icode + ': ' + item.idesc}"></option>
+            </select>
+
+
+
+        </div>
+        <div class="d-flex  justify-content-center">
+            <div class="w-50 m-auto d-flex align-items-center">
+                <div style="width: 100px">Quantity:</div>
+                <input style="width: 300px"  type="text" class="form-control" placeholder="Username" aria-label="Username"
+                       aria-describedby="basic-addon1">
+            </div>
+
+            <div class=" m-auto d-flex align-items-center">
+                <div style="width: 200px">Transaction Date:</div>
+                <div style="width: 300px"  class="input-group date" data-provide="datepicker">
+                    <input type="text" class="form-control">
+                    <div class="input-group-addon">
+                        <span class="glyphicon glyphicon-th"></span>
+                    </div>
                 </div>
             </div>
+
         </div>
 
-    </div>
+        <button type="button" class="btn btn-primary mt-3">Save</button>
+    </Form>
 
-    <button type="button" class="btn btn-primary mt-3">Save</button>
 
 </div>
 
